licenses(["notice"])

package(default_visibility = ["//:__subpackages__"])

load("//tools/build_defs:javac.bzl", "JAVACOPTS_OSS")

filegroup(
    name = "srcs",
    srcs = glob(
        [
            "*.java",
        ],
    ),
)

full_protos = [
    "//:aes_ctr_hmac_streaming_java_proto",
    "//:aes_gcm_hkdf_streaming_java_proto",
    "//:common_java_proto",
    "//:config_java_proto",
    "//:hmac_java_proto",
    "//:tink_java_proto",
]

lite_protos = [
    "//:aes_ctr_hmac_streaming_java_proto_lite",
    "//:aes_gcm_hkdf_streaming_java_proto_lite",
    "//:common_java_proto_lite",
    "//:config_java_proto_lite",
    "//:hmac_java_proto_lite",
    "//:tink_java_proto_lite",
]

java_library(
    name = "streamingaead",
    srcs = [":srcs"],
    javacopts = JAVACOPTS_OSS,
    visibility = ["//visibility:public"],
    deps = full_protos + [
        "//src/main/java/com/google/crypto/tink",
        "//src/main/java/com/google/crypto/tink/subtle",
        "//src/main/java/com/google/crypto/tink/subtle:streaming",
        "@com_google_protobuf_javalite//:protobuf_java_lite",
        "@maven//:com_google_code_findbugs_jsr305",
    ],
)

java_library(
    name = "android",
    srcs = [":srcs"],
    javacopts = JAVACOPTS_OSS,
    visibility = ["//visibility:public"],
    deps = lite_protos + [
        "//src/main/java/com/google/crypto/tink:android",
        "//src/main/java/com/google/crypto/tink/subtle",
        "//src/main/java/com/google/crypto/tink/subtle:streaming",
        "@com_google_protobuf_javalite//:protobuf_java_lite",
        "@maven//:com_google_code_findbugs_jsr305",
    ],
)
