load("//tools/build_defs:javac.bzl", "JAVACOPTS_OSS")

licenses(["notice"])

package(
    default_testonly = 1,
    default_visibility = ["//:__subpackages__"],
)

java_library(
    name = "test_util",
    srcs = ["TestUtil.java"],
    javacopts = JAVACOPTS_OSS,
    deps = [
        "//src/main/java/com/google/crypto/tink:cleartext_keyset_handle",
        "//src/main/java/com/google/crypto/tink:core",
        "//src/main/java/com/google/crypto/tink:primitives",
        "//src/main/java/com/google/crypto/tink/aead",
        "//src/main/java/com/google/crypto/tink/daead",
        "//src/main/java/com/google/crypto/tink/hybrid",
        "//src/main/java/com/google/crypto/tink/mac",
        "//src/main/java/com/google/crypto/tink/streamingaead",
        "//src/main/java/com/google/crypto/tink/subtle",
        "//:aes_ctr_hmac_aead_java_proto",
        "//:aes_ctr_hmac_streaming_java_proto",
        "//:aes_ctr_java_proto",
        "//:aes_eax_java_proto",
        "//:aes_gcm_hkdf_streaming_java_proto",
        "//:aes_gcm_java_proto",
        "//:aes_siv_java_proto",
        "//:common_java_proto",
        "//:config_java_proto",
        "//:ecdsa_java_proto",
        "//:ecies_aead_hkdf_java_proto",
        "//:hmac_java_proto",
        "//:rsa_ssa_pkcs1_java_proto",
        "//:rsa_ssa_pss_java_proto",
        "//:tink_java_proto",
        "@com_google_protobuf_javalite//:protobuf_java_lite",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_library(
    name = "test_util-android",
    srcs = ["TestUtil.java"],
    javacopts = JAVACOPTS_OSS,
    deps = [
        "//src/main/java/com/google/crypto/tink:cleartext_keyset_handle_android",
        "//src/main/java/com/google/crypto/tink:core-android",
        "//src/main/java/com/google/crypto/tink:primitives",
        "//src/main/java/com/google/crypto/tink/aead:android",
        "//src/main/java/com/google/crypto/tink/daead:android",
        "//src/main/java/com/google/crypto/tink/hybrid:android",
        "//src/main/java/com/google/crypto/tink/mac:android",
        "//src/main/java/com/google/crypto/tink/streamingaead:android",
        "//src/main/java/com/google/crypto/tink/subtle",
        "//:aes_ctr_hmac_aead_java_proto_lite",
        "//:aes_ctr_hmac_streaming_java_proto_lite",
        "//:aes_ctr_java_proto_lite",
        "//:aes_eax_java_proto_lite",
        "//:aes_gcm_hkdf_streaming_java_proto_lite",
        "//:aes_gcm_java_proto_lite",
        "//:aes_siv_java_proto_lite",
        "//:common_java_proto_lite",
        "//:config_java_proto_lite",
        "//:ecdsa_java_proto_lite",
        "//:ecies_aead_hkdf_java_proto_lite",
        "//:hmac_java_proto_lite",
        "//:rsa_ssa_pkcs1_java_proto_lite",
        "//:rsa_ssa_pss_java_proto_lite",
        "//:tink_java_proto_lite",
        "@com_google_protobuf_javalite//:protobuf_java_lite",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_library(
    name = "streaming_test_util",
    srcs = ["StreamingTestUtil.java"],
    javacopts = JAVACOPTS_OSS,
    deps = [
        ":test_util",
        "//src/main/java/com/google/crypto/tink:primitives",
        "//src/main/java/com/google/crypto/tink/subtle",
        "@maven//:junit_junit",
    ],
)

java_library(
    name = "streaming_test_util-android",
    srcs = ["StreamingTestUtil.java"],
    javacopts = JAVACOPTS_OSS,
    deps = [
        ":test_util-android",
        "//src/main/java/com/google/crypto/tink:primitives",
        "//src/main/java/com/google/crypto/tink/subtle",
        "@maven//:junit_junit",
    ],
)

java_library(
    name = "wycheproof_test_util",
    srcs = ["WycheproofTestUtil.java"],
    javacopts = JAVACOPTS_OSS,
    deps = [
        ":test_util",
        "//src/main/java/com/google/crypto/tink/subtle",
        "@maven//:org_json_json",
    ],
)

java_library(
    name = "wycheproof_test_util-android",
    srcs = ["WycheproofTestUtil.java"],
    javacopts = JAVACOPTS_OSS,
    deps = [
        ":test_util-android",
        "//src/main/java/com/google/crypto/tink/subtle",
        "@maven//:org_json_json",
    ],
)
